camel-quarkus-order-processor-api/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/scrape_port: '8080'
    prometheus.io/path: /q/metrics
  name: quarkus-order-processor-api
  labels:
    app: quarkus-order-processor-api
spec:
  ports:
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: quarkus-order-processor-api
  type: ClusterIP
  sessionAffinity: None
